tests/ui/compile_errors/derive_on_union.rs
use cloneable_dyn::CloneDyn;

#[derive(CloneDyn)]
union SomeUnion {
    first: i32,
    second: i8,
}

fn main() {}
